--- a/code/app/src/main/res/layout/activity_main.xml
+++ b/code/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,14 @@
 
    
     <TextView
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Happy Birthday Lalit"
+        android:background="@color/cardview_light_background"
+        android:textSize="24dp"
+        android:textColor="@color/purple_500"
+        android:textAllCaps="true"
        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
